--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Testing Phase !!!!</h1>
-    <h2>Testinng Pill;</h2>
+    <h2>Testinng Pull;</h2>
     Hello , World !!
 </body>
 </html>
