--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        body {
+
+            color: aqua;
+        }
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello</title>
 </head>
 <body>
-    <h1 style = "color : red">Testin Phase !</h1>
+    <h1>Testin Phase !</h1>
     <h1>Testing</h1>
     <h2>Testinng Pull;</h2>
     Hello , World !!
